# thermobench

./: .clang-format  .dir-locals.el  .editorconfig  .envrc  .gitignore  .gitmodules  Makefile  README.md  aarch64.txt  config.h.meson  default.nix  evdns.c  main.cpp  meson.build  meson_options.txt  thermobench.config  thermobench.files  thermobench.includes
.github/workflows/: clang-format.yml  julia-docs.yaml  test.yml
bench/app/lift/: lift.c
bench/app/powerwindow/: powerwindow.c
bench/kernel/binarysearch/: binarysearch.c
bench/kernel/bitcount/: bitcount.c
bench/kernel/bitonic/: bitonic.c
bench/kernel/bsort/: bsort.c
bench/kernel/complex_updates/: complex_updates.c
bench/kernel/cosf/: cosf.c
bench/kernel/countnegative/: countnegative.c
bench/kernel/cubic/: cubic.c
bench/kernel/deg2rad/: deg2rad.c
bench/kernel/fac/: fac.c
bench/kernel/fft/: fft.c
bench/kernel/filterbank/: filterbank.c
bench/kernel/fir2dim/: fir2dim.c
bench/kernel/iir/: iir.c
bench/kernel/insertsort/: insertsort.c
bench/kernel/isqrt/: isqrt.c
bench/kernel/jfdctint/: jfdctint.c
bench/kernel/lms/: lms.c
bench/kernel/ludcmp/: ludcmp.c
bench/kernel/matrix1/: matrix1.c
bench/kernel/md5/: md5.c
bench/kernel/minver/: minver.c
bench/kernel/pm/: pm.c
bench/kernel/prime/: prime.c
bench/kernel/quicksort/: quicksort.c
bench/kernel/rad2deg/: rad2deg.c
bench/kernel/recursion/: recursion.c
bench/kernel/sha/: sha.c
bench/kernel/st/: st.c
bench/parallel/rosace/thread1/: ros_th1.c
bench/parallel/rosace/thread2/: ros_th2.c
bench/parallel/rosace/thread3/: ros_th3.c
bench/parallel/rosace/thread4/: ros_th4.c
bench/parallel/rosace/thread5/: ros_th5.c
bench/sequential/adpcm_dec/: adpcm_dec.c
bench/sequential/adpcm_enc/: adpcm_enc.c
bench/sequential/ammunition/: ammunition.c
bench/sequential/anagram/: anagram.c
bench/sequential/audiobeam/: audiobeam.c
bench/sequential/cjpeg_transupp/: cjpeg_transupp.c
bench/sequential/cjpeg_wrbmp/: cjpeg_wrbmp.c
bench/sequential/dijkstra/: dijkstra.c
bench/sequential/epic/: epic.c
bench/sequential/fmref/: fmref.c
bench/sequential/g723_enc/: g723_enc.c
bench/sequential/gsm_dec/: gsm_dec.c
bench/sequential/gsm_enc/: gsm_enc.c
bench/sequential/h264_dec/: h264_dec.c
bench/sequential/huff_dec/: huff_dec.c
bench/sequential/huff_enc/: huff_enc.c
bench/sequential/mpeg2/: mpeg2.c
bench/sequential/ndes/: ndes.c
bench/sequential/petrinet/: petrinet.c
bench/sequential/rijndael_dec/: rijndael_dec.c
bench/sequential/rijndael_enc/: rijndael_enc.c
bench/sequential/statemate/: statemate.c
bench/sequential/susan/: susan.c
bench/test/cover/: cover.c
bench/test/duff/: duff.c
bench/test/test3/: test3.c
benchmarks/: meson.build  tbwrap.c  tbwrap.h
benchmarks/CPU/: meson.build
benchmarks/CPU/instr/: .gitignore  Makefile  alu_fp32_add.h  alu_fp32_div.h  alu_fp32_madd.h  alu_fp32_mul.h  alu_fp32_mul_add.h  alu_fp64_add.h  alu_fp64_div.h  alu_fp64_madd.h  alu_fp64_mul.h  alu_fp64_mul_add.h  alu_int32_add.h  alu_int32_changing_data_change.h  alu_int32_changing_data_ref.h  alu_int32_div.h  alu_int32_madd.h  alu_int32_mul.h  alu_int64_add.h  alu_int64_changing_data_change.h  alu_int64_changing_data_ref.h  alu_int64_div.h  alu_int64_madd.h  alu_int64_mul.h  main.c  meson.build  read.h  read_demos_config.yaml  simd_fp32_add.h  simd_fp32_div.h  simd_fp32_madd.h  simd_fp32_mul.h  simd_fp32_mul_add.h  simd_fp64_add.h  simd_fp64_div.h  simd_fp64_madd.h  simd_fp64_mul.h  simd_fp64_mul_add.h  simd_int16_add.h  simd_int16_madd.h  (+12 more)
benchmarks/CPU/ram/STREAM/: Makefile  stream.c
benchmarks/CPU/ram/llcbench/: Makefile  sys.def
benchmarks/CPU/ram/llcbench/cachebench/: sys.def
benchmarks/CPU/ram/ramspeed-smp/: runall.sh
benchmarks/CPU/ram/random_access/: Makefile  bench.h  random_access_16b.h  random_access_32b.h  random_access_64b.h  random_access_8b.h
benchmarks/GPU/cuda/: Makefile  cuda-gpu-init.h  cuda_fp16_add.h  cuda_fp32_add.h  cuda_fp32_div.h  cuda_fp32_mul.h  cuda_fp64_add.h  cuda_fp64_div.h  cuda_fp64_mul.h  cuda_int16_add.h  cuda_int16_div.h  cuda_int16_mul.h  cuda_int32_add.h  cuda_int32_div.h  cuda_int32_mul.h  cuda_int64_add.h  cuda_int64_div.h  cuda_int64_mul.h  main.cpp
benchmarks/GPU/opencl/: Makefile  bench.h  opencl-gpu-init.h  opencl_int32_add.h
benchmarks/autobench_2.0/: README.md
benchmarks/autobench_2.0/single/: Makefile  benchmarks.h  main.c  meson.build  tbwrap.c
benchmarks/cl-bench/: Makefile  README.md  run.py  yocto_env.sh
benchmarks/cl-bench/src/: common.c  common.h  mandelbrot.c  mandelbrot.cc  mandelbrot.cl  mandelbrot.h  memory.cc  memory.cl  meson.build
benchmarks/mem/: membench.c  meson.build
benchmarks/sched/: bsort.c  cpu_set.hpp  meson.build  workload-distr.cpp
data_visualizer/: README.md  data_visualizer.py
dev/: .dir-locals.el  index.html  search_index.js
dev/search/: index.html
doc/example/: select.new.c
julia/: Manifest.toml  Project.toml  README.md
julia/docs/: .gitignore  Makefile  Manifest.toml  make.jl  test.csv  test1.csv  test2.csv
julia/docs/src/: index.md
julia/src/: Thermobench.jl  funcs.jl
julia/test/: runtests.jl  test.csv
linux64/: core_portme.c
report_gen/: README.md  graphgen.jl  graphgen.py  htmlgen.py
report_gen/example/: a.csv  b.csv  c.csv
report_gen/example/figs/graphgen/: all:x0-y1.html
report_gen/example/report/: main.html
report_gen/example/report/htmls/: a:x0-Y.html  all:x0-y1.html  all:x0-y2.html  b:x0-Y.html  (+7 more)
src/: .gitignore  Makefile  csvRow.cpp  csvRow.h  ev.c  meson.build  sched_deadline.c  sched_deadline.h  sensors.imx8  sensors.tx2  thermobench.cpp  util.hpp
test/: 0010-help.t  0020-basic.t  0022-csv-escape.t  0030-column.t  0040-exec.t  0040-time.t  0041-time-kill-all.t  0050-sensors.t  Makefile  meson.build  tap-functions  test  testlib
utils/powermeter/: Cargo.toml  README.md
utils/powermeter/src/: main.rs
utils/sensord/: Cargo.toml
utils/sensord/src/: main.rs
v0.1/: index.html  search_index.js
v0.1/search/: index.html
wayland/: os-compatibility.c  os-compatibility.h  shm.c  shm.h
