[package]
name = "sensord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
hyper = { version = "0.14.17", features = ["server", "tcp", "http1"] }
lazy_static = "1.4.0"
prometheus = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }
